# pytest_course

./: README.md  pyproject.toml  pytest.ini
tests/: test_first.py  test_first_class.py
tests/exceptions/: test_exceptions.py
tests/marks/: test_marks_class.py  test_marks_server.py
tests/parametrize/: test_parametrize.py
tests/skip_skipif_xfail/: test_mark_for_skip.py  test_mark_for_skipif.py  test_mark_for_xfail.py
tests/task/: test_four.py  test_tree.py
