[tool.poetry]
name = "pytest-course"
version = "0.1.0"
description = ""
authors = ["rho <rhosimani@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
